--- a/less/tables.less
+++ b/less/tables.less
@@ -44,12 +44,12 @@ th {
   //table-layout: fixed;
   margin-bottom: 15px;
   // Cells
-  > tfoot,
+  > tbody,
    > thead,
-  > tbody {
+  > tfoot {
     > tr {
-      > th,
-      > td {
+      > td,
+      > th {
         padding: @table-cell-padding;
         line-height: @line-height-base;
         vertical-align: top;
@@ -63,12 +63,12 @@ th {
     border-bottom: 1px solid @table-border-color;
   }
   // Remove top border from thead by default
-  > caption + thead,
+  > colgroup + thead,
    > thead:first-child,
-  > colgroup + thead {
+  > caption + thead {
     > tr:first-child {
-      > th,
-      > td {
+      > td,
+      > th {
         border-top: 0;
       }
     }
@@ -126,15 +126,19 @@ th {
 // Condensed table w/ half padding
 
 .table-condensed {
-  > tfoot,
+  > tbody,
    > thead,
-  > tbody {
+  > tfoot {
     > tr {
-      > th,
-      > td {
+      > td,
+      > th {
         padding: @table-condensed-cell-padding;
       }
     }
+  }
+
+  p {
+    margin: 3px 0;
   }
 }
 // Bordered version
@@ -144,20 +148,20 @@ th {
 .table-bordered {
   border: 1px solid @table-border-color;
 
-  > tfoot,
+  > tbody,
    > thead,
-  > tbody {
+  > tfoot {
     > tr {
-      > th,
-      > td {
+      > td,
+      > th {
         border: 1px solid @table-border-color;
       }
     }
   }
 
   > thead > tr {
-    > th,
-    > td {
+    > td,
+    > th {
       border-bottom-width: 2px;
     }
   }
@@ -183,12 +187,12 @@ th {
 // KU specific
 
 .table-noborder {
-  > tfoot,
+  > tbody,
    > thead,
-  > tbody {
+  > tfoot {
     > tr {
-      > th,
-      > td {
+      > td,
+      > th {
         border: 0;
       }
     }
@@ -201,14 +205,14 @@ th {
   border-collapse: separate;
 
   > tr {
-    > th,
-    > td {
+    > td,
+    > th {
       border: 0;
     }
   }
 }
-
 // table with images in first td of each tr - remove left padding
+
 .table-with-img-col {
   > tbody {
     > tr {
@@ -220,7 +224,6 @@ th {
     }
   }
 }
-
 // Table cell sizing
 //
 // Reset default table behavior
@@ -286,17 +289,17 @@ table {
     > .table-bordered {
       border: 0;
       // Nuke the appropriate borders so that the parent can handle them
-      > tfoot,
+      > tbody,
        > thead,
-      > tbody {
+      > tfoot {
         > tr {
-          > th:first-child,
-          > td:first-child {
+          > td:first-child,
+          > th:first-child {
             border-left: 0;
           }
 
-          > th:last-child,
-          > td:last-child {
+          > td:last-child,
+          > th:last-child {
             border-right: 0;
           }
         }
@@ -304,11 +307,11 @@ table {
       // Only nuke the last row's bottom-border in `tbody` and `tfoot` since
       // chances are there will be only one `tr` in a `thead` and that would
       // remove the border altogether.
-      > tbody,
-      > tfoot {
+      > tfoot,
+      > tbody {
         > tr:last-child {
-          > th,
-          > td {
+          > td,
+          > th {
             border-bottom: 0;
           }
         }
