--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -129,6 +129,11 @@
     right: 0;
   }
 }
+
+.cookiefilter-header {
+  font-size: 18px;
+  font-weight: 600;
+}
 // KU privacy policy box
 @media (min-width: @screen-xs-max) {
   .privacy-policy {
