--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -113,6 +113,7 @@
 
 .cookiefilter {
   position: relative;
+  min-height: 150px;
   background-color: @well-bg;
   border: 1px solid @well-border;
   padding: 15px;
@@ -123,9 +124,9 @@
   &::before {
     .icon;
     position: absolute;
-    font-size: 175px;
+    font-size: 156px;
     opacity: 0.075;
-    top: 0;
+    top: 5px;
     right: 0;
   }
 }
