--- a/less/tables.less
+++ b/less/tables.less
@@ -31,6 +31,8 @@ caption {
   padding-bottom: @table-cell-padding;
   color: @text-muted;
   text-align: left;
+  caption-side: bottom;
+  border-bottom: 1px solid @gray;
 }
 
 th {
