--- a/less/tables.less
+++ b/less/tables.less
@@ -31,6 +31,7 @@ caption {
   padding-bottom: @table-cell-padding;
   color: @text-muted;
   text-align: left;
+  font-size: 92%;
   caption-side: bottom;
   border-bottom: 1px solid @gray;
 }
