Make selects 100% wide (again)

--- a/less/forms.less
+++ b/less/forms.less
@@ -139,7 +139,7 @@ output {
   }
   select& {
     // KU specific
-    width: auto;
+    // width: auto;
     max-width: 100%;
   }
   // Disabled and read-only inputs
