--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -332,41 +332,58 @@ html:lang(en) .ku-branding-text {
 
 /* Jumpboard */
 .entries .entry {
-  background-image: linear-gradient(to bottom, #f3f3f1 0, #edece9 100%);
-}
-
-.entries .entry::before {
-  background-image: linear-gradient(to bottom, #ecece9 0, #e0e0de 100%);
-  content: "";
-  display: block;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  width: 100%;
-  transition: opacity .5s;
-}
-
-.entries .entry:hover::before {
-  opacity: 1;
+  padding: 10px 0;
+  background-image: none;
+  border-bottom: 1px solid #999;
 }
 
 .entries .entry>a {
   position: relative;
-  color: #444 !important;
-  font-size: 16px;
+  color: #901a1e !important;
+  font-size: 20px;
 }
 
 .entries .entry>a:before {
   position: absolute;
-  font-size: 15px;
+  font-size: 16px;
   transform: translatey(-50%);
   left: auto;
   right: 0;
 }
 
+@media (max-width: 991px) {
+  .entries {
+    border-top: 0;
+  }
+
+  .entries .entry>a {
+    text-transform: capitalize;
+  }
+}
+
 @media (min-width: 992px) {
+  .entries .entry {
+    background-image: linear-gradient(to bottom, #f3f3f1 0, #edece9 100%);
+    border-bottom: 0;
+  }
+
+  .entries .entry::before {
+    background-image: linear-gradient(to bottom, #ecece9 0, #e0e0de 100%);
+    content: "";
+    display: block;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    transition: opacity .5s;
+  }
+
+  .entries .entry:hover::before {
+    opacity: 1;
+  }
+
   .entries .entry>a:before {
     display: none
   }
@@ -380,8 +397,10 @@ html:lang(en) .ku-branding-text {
   }
 
   .entries .entry>a {
+    font-size: 16px;
     padding: 25px 15px;
     display: block;
+    color: #444 !important;
   }
 
   .entries .entry>a:hover {
