--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -331,8 +331,11 @@ html:lang(en) .ku-branding-text {
 }
 
 /* Jumpboard */
+.entries {
+  border-top: 1px solid #cfcfcf;
+}
 .entries .entry {
-  padding: 10px 0;
+  padding: 10px 6px;
   background-image: none;
   border-bottom: 1px solid #999;
 }
@@ -410,5 +413,7 @@ html:lang(en) .ku-branding-text {
   .entries .entry+.entry:after {
     top: 0;
     height: 100%;
+        background-color: #cfcfcf;
   }
+
 }
