--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -117,6 +117,10 @@
           font-weight: 600;
         }
 
+        .tile-cat {
+          display: none;
+        }
+
         .tile-body {
           display: block;
           font-size: 16px;
