Parallax - display menu

--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -16,29 +16,29 @@
   background: linear-gradient(to right, rgb(@ku-red) var(--scroll), transparent 0);
 }
 
-.ku-topbar {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  transition: all 0.3s ease;
-
-  &.ku-topbar-fixed-top {
-    transform: translatey(6px);
-  }
-}
-
-.ku-nav {
-  position: fixed;
-  left: 0;
-  right: 0;
-  transform: translatey(28px);
-  transition: all 0.3s ease;
-
-  &.ku-nav-top {
-    transform: translatey(33px);
-  }
-}
+// .ku-topbar {
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+//   transition: all 0.3s ease;
+//
+//   &.ku-topbar-fixed-top {
+//     transform: translatey(6px);
+//   }
+// }
+//
+// .ku-nav {
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   transform: translatey(28px);
+//   transition: all 0.3s ease;
+//
+//   &.ku-nav-top {
+//     transform: translatey(33px);
+//   }
+// }
 
 // .ku-branding {
 //   display: none;
@@ -48,9 +48,9 @@
 //   }
 // }
 
-#content {
-  margin-top: 42px;
-}
+// #content {
+//   margin-top: 42px;
+// }
 
 .breadcrumbs,
 .local-footer {
@@ -220,9 +220,9 @@
 
 @media all and (min-width: @screen-sm) {
 
-  #content {
-    margin-top: 68px;
-  }
+  // #content {
+  //   margin-top: 68px;
+  // }
 
   .campaign-block {
     /* Take desktop scrollbar into account: */
