--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -40,13 +40,13 @@
 //   }
 // }
 
-// .ku-branding {
-//   display: none;
-//
-//   &::after {
-//     display: none;
-//   }
-// }
+.ku-branding {
+  // display: none;
+
+  &::after {
+    display: none;
+  }
+}
 
 // #content {
 //   margin-top: 42px;
