--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -133,6 +133,7 @@ nav {
   &:extend(.clearfix all);
   margin-bottom: @grid-gutter-height;
 
+ // Todo: delete this:
   &.picture .title {
     display: none;
   }
