--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -373,25 +373,23 @@ html:lang(en) .ku-branding-text {
   }
 
   .entries .entry {
-    background-image: linear-gradient(to bottom, #f3f3f1 0, #edece9 100%);
+    background-color: #edece9;
     border-bottom: 0;
   }
 
-  .entries .entry::before {
+  /* .entries .entry::before {
     background-image: linear-gradient(to bottom, #ecece9 0, #e0e0de 100%);
     content: "";
     display: block;
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
-    opacity: 0;
+    right: 0;
     width: 100%;
-    transition: opacity .5s;
-  }
 
-  .entries .entry:hover::before {
-    opacity: 1;
+  } */
+  .entries .entry:hover {
+    transition: background-color .5s;
   }
 
   .entries .entry>a:before {
@@ -411,6 +409,24 @@ html:lang(en) .ku-branding-text {
     padding: 25px 15px;
     display: block;
     color: #444 !important;
+  }
+
+  .entries .entry>a::after {
+    font-family: ku-symbols !important;
+    speak: none;
+    font-style: normal;
+    font-weight: 400;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\61";
+    color: inherit;
+    position: relative;
+    font-size: 14px;
+    margin-left: 5px;
+    top: -1px;
   }
 
   .entries .entry>a:hover {
