--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5597,8 +5597,7 @@ audio, video {
 }
 
 #obarea4 > #obarea2 + #obarea3 #subsite-navigation {
-  width: 100%;
-  max-width: 1040px;
+  width: auto;
 }
 
 /* Oevrige oplysninger */
