--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -319,6 +319,7 @@ nav[aria-label="Pager"] {
 }
 
 .readAll {
+  margin-top: 14px;
   margin-bottom: 0;
   border: 1px solid @text-color;
   padding: 6px 9px;
