--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -2206,22 +2206,6 @@ div.admincontentwrapper div#content {
   right: 20px;
 }
 
-/* Firefox select arrow */
-@media screen and (min--moz-device-pixel-ratio:0) {
-  select.form-control:not([multiple]) {
-    padding-right: 25px;
-    background-image: url("data:image/svg+xml,\
-            <svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='10px' height='10px' viewBox='0 0 1000 1000' fill='rgb(51,51,51)'>\
-                <path d='M900 400 l -800 0 l 400 400 z'/>\
-            </svg>") !important;
-    background-repeat: no-repeat;
-    background-position: calc(100% - 7px) 50%;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-  }
-}
-
 #confirm {
   float: left;
 }
@@ -5758,12 +5742,12 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
   margin: 0 1em;
 }
 
-.dataTables_filter form-group {
+.dataTables_filter.form-group {
   display: -ms-flexbox;
   display: flex;
 }
 
-.dataTables_filter form-group>label {
+.dataTables_filter.form-group>label {
   -ms-flex-item-align: end;
   align-self: flex-end;
 }
