--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5601,6 +5601,7 @@ audio, video {
   width: auto;
 }
 
+.admin-unused-files #select_all::after {display: none;}
 .admin-unused-files th:nth-last-child(2) {}
 
 /* Oevrige oplysninger */
@@ -5754,7 +5755,7 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 /* Remove shortly */
 /* New subsite editing interface */
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -5826,5 +5827,5 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
 /* end */
