--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4335,6 +4335,10 @@ div.gridcontent-dialog h1 {
   margin-top: 10px;
 }
 
+.dialogcontent select.form-control {
+  width: auto;
+}
+
 .obvius-editengine form div.obvius-editengine-confirmation div.gridcontent-dialog#gridcontent-dialog-edit-flexiblebox div.buttonrow {
   /* Added to make this row sticky: */
   position: -webkit-sticky;
@@ -5755,7 +5759,7 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 /* Remove shortly */
 /* New subsite editing interface */
-/* #webstedinfo {
+#webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -5827,5 +5831,5 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-} */
+}
 /* end */
