Cookie privacy policy

--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -23,7 +23,7 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-datatables/">Template with data tables</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-formvalidation/">Template with form validation</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-loginpage/">Login page</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Link 2.1</a>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-cookie-popup/">KU cookie popup</a>
             <ul>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-courses/">Kurser.ku.dk</a>
               <li role="presentation"><a role="menuitem" tabindex="-1" href="../ku-course-details/">Kursus detaljeside</a></li>
