--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -81,10 +81,8 @@
 .customcheck {
   display: block;
   position: relative;
-  padding-left: 35px;
-  margin-top: 4px;
-  margin-right: 15px;
-  margin-bottom: 12px;
+  padding-left: 35px!important;
+  margin: 4px 4px 12px 0;
   cursor: pointer;
   font-size: 22px;
   user-select: none;
@@ -96,7 +94,7 @@
 
     &:checked ~ .checkmark {
       background-color: #005cc8;
-      border-radius: 5px;
+      border-radius: @border-radius-base;
     }
 
     &:checked ~ .checkmark {
