--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -296,14 +296,14 @@
 
 #geonatloginform,
 .Geonat-Login .LoginLinks {
-  padding: 5px 0;
+  padding: 5px 0 0 0;
   overflow: hidden;
   margin: 0;
 }
 
 #geonatloginform {
   .form-group {
-    margin-bottom: 8px;
+    margin-bottom: 7px;
   }
 
   .checkbox {
