--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -1,11 +1,11 @@
 <div class="bs-docs-section">
-  <section class="container-fluid ccc">
+  <section class="container-fluid ccc" tabindex="-1" role="dialog" aria-labelledby="ccc-title" aria-describedby="ccc-desc">
     <!---->
-    <div class="container ccc-popup">
+    <div class="container ccc-popup" role="document">
       <header class="ccc-popup-header">
-        <h2 class="ccc-title">Samtykke til brug af cookies</h2>
+        <h2 class="ccc-title" id="ccc-title">Samtykke til brug af cookies</h2>
       </header>
-      <div class="ccc-intro">
+      <div class="ccc-intro" id="ccc-desc">
         <p>Vi vil gerne gemme oplysninger på din computer eller mobil (såkaldte cookies) for at forbedre din brugeroplevelse. Du kan altid ændre dit samtykke under "<a href="#">Cookie- og privatlivspolitik</a>" som du finder i bunden af hver side.
         </p>
         <p>Du har hverken accepteret eller afvist cookies</p>
@@ -13,115 +13,136 @@
       <ul class="ccc-list">
         <li>
           <div class="checkbox ccc-list-actions">
-            <label class="customcheck" for="check-0">
-              <input checked="checked" type="checkbox" id="check-0" title="Acceptér eller afslå">
+            <label class="customcheck" for="check-0" aria-label="Acceptér eller afslå cookies">
+              <input checked="checked" type="checkbox" id="check-0">
+              <span class="sr-only">Acceptér eller afslå cookies</span>
               <span class="checkmark"></span>
             </label>
-            <div class="ccc-select">
+            <div class="ccc-select" data-select="stat">
               <h3 class="ccc-select-title">Statistik (<span class="stat-count">3</span>)</h3>
               <p>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</p>
-              <a role="button" class="ccc-arrow collapsed" aria-label="Se Cookies" data-toggle="collapse" href="#ccc-stat" aria-expanded="false" aria-controls="ccc-stat">
-                <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
-              </a>
             </div>
           </div>
-          <div class="collapse ccc-table-wrapper" id="ccc-stat">
-            <table class="table table-striped ccc-table">
-              <thead>
-                <tr>
-                  <th>Navn</th>
-                  <th>Udbyder</th>
-                  <th>Formål</th>
-                  <th>Udløb</th>
-                  <th>Type</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>XCookie_123</td>
-                  <td>Ku.dk</td>
-                  <td>Til login</td>
-                  <td> session</td>
-                  <td>sessionstorage</td>
-                </tr>
-                <tr>
-                  <td>YCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Værn mod CSRF angreb</td>
-                  <td>30 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="ccc-table-wrapper" data-select="stat">
+            <div class="table-responsive">
+              <table class="table table-striped ccc-table">
+                <thead>
+                  <tr>
+                    <th>Navn</th>
+                    <th>Udbyder</th>
+                    <th>Formål</th>
+                    <th>Udløb</th>
+                    <th>Type</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>XCookie_123</td>
+                    <td>Ku.dk</td>
+                    <td>Til login</td>
+                    <td> session</td>
+                    <td>sessionstorage</td>
+                  </tr>
+                  <tr>
+                    <td>YCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Værn mod CSRF angreb</td>
+                    <td>30 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                  <tr>
+                    <td>ZCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Test af cookie-system</td>
+                    <td>40 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </li>
         <li>
           <div class="checkbox ccc-list-actions">
-            <label class="customcheck" for="check-1">
-              <input type="checkbox" id="check-1" title="Acceptér eller afslå">
+            <label class="customcheck" for="check-1" aria-label="Acceptér eller afslå cookies">
+              <input type="checkbox" id="check-1">
+              <span class="sr-only">Acceptér eller afslå cookies</span>
               <span class="checkmark"></span>
             </label>
-            <div class="ccc-select">
+            <div class="ccc-select" data-select="market">
               <h3 class="ccc-select-title">Markedsføring (<span class="market-count">31</span>)</h3>
-              <p>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</p>
-              <a role="button" class="ccc-arrow collapsed" aria-label="Se Cookies" data-toggle="collapse" href="#ccc-market" aria-expanded="false" aria-controls="ccc-market">
-                <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
-              </a>
+              <p>Universitetet bruger forsk e produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</p>
             </div>
           </div>
-          <div class="collapse ccc-table-wrapper" id="ccc-market">
-            <table class="table table-striped ccc-table">
-              <thead>
-                <tr>
-                  <th>Navn</th>
-                  <th>Udbyder</th>
-                  <th>Formål</th>
-                  <th>Udløb</th>
-                  <th>Type</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>XCookie_123</td>
-                  <td>Ku.dk</td>
-                  <td>Til login</td>
-                  <td> session</td>
-                  <td>sessionstorage</td>
-                </tr>
-                <tr>
-                  <td>YCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Værn mod CSRF angreb</td>
-                  <td>30 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="ccc-table-wrapper" data-select="market">
+            <div class="table-responsive">
+              <table class="table table-striped ccc-table">
+                <thead>
+                  <tr>
+                    <th>Navn</th>
+                    <th>Udbyder</th>
+                    <th>Formål</th>
+                    <th>Udløb</th>
+                    <th>Type</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>XCookie_123</td>
+                    <td>Ku.dk</td>
+                    <td>Til login</td>
+                    <td> session</td>
+                    <td>sessionstorage</td>
+                  </tr>
+                  <tr>
+                    <td>YCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Værn mod CSRF angreb</td>
+                    <td>30 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                  <tr>
+                    <td>ZCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Test af cookie-system</td>
+                    <td>40 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                  <tr>
+                    <td>ZCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Test af cookie-system</td>
+                    <td>40 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                  <tr>
+                    <td>ZCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Test af cookie-system</td>
+                    <td>40 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                  <tr>
+                    <td>ZCookie</td>
+                    <td>Ku.dk</td>
+                    <td>Test af cookie-system</td>
+                    <td>40 minutter</td>
+                    <td>HTTP cookie</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
           <!---->
         </li>
       </ul>
       <div class="ccc-buttons">
-        <button class="btn btn-default">
+        <button class="btn btn-default btn-lg">
           Acceptér alle
         </button>
-        <button class="btn btn-default">
+        <button class="btn btn-default btn-lg">
           Afvis alle
-          </button>
+        </button>
       </div>
     </div>
   </section>
@@ -129,3 +150,14 @@
   ...
   {% endhighlight %}
 </div>
+
+<script>
+  $(function() {
+    $('.ccc-select').click(function() {
+      $('body').toggleClass("modal-open");
+      $(this).toggleClass("open");
+      var type = $(this).data('select');
+      $('.ccc-table-wrapper[data-select="' + type + '"]').slideToggle();
+    });
+  });
+</script>
