--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -19,8 +19,6 @@
   padding-bottom: @grid-gutter-height;
 }
 
-.ccc-popup-header {}
-
 .ccc-title {
   font-size: 26px;
   margin-top: @grid-gutter-by-half;
@@ -34,6 +32,7 @@
   list-style: none;
   padding: 0;
   position: relative;
+  margin-bottom: @grid-gutter-height;
 }
 
 .ccc-list > li {
@@ -47,13 +46,36 @@
 }
 
 .ccc-select-title {
-  font-size: 22px;
+  font-size: 20px;
   margin-top: 0;
 }
 
 .ccc-select {
   font-size: 14px;
   position: relative;
+  padding-bottom: 20px;
+  cursor: pointer;
+  .glyphicon-menu-down;
+
+  &:before {
+    .glyphicon;
+    position: absolute;
+    top: auto;
+    right: 0;
+    bottom: 0;
+    font-size: 26px;
+  }
+
+  &:active,
+  &:focus {
+    .tab-focus-v2();
+  }
+
+  &.open {
+    &:before {
+      content: "\e260";
+    }
+  }
 }
 
 .ccc-list-actions {
@@ -81,7 +103,7 @@
 .customcheck {
   display: block;
   position: relative;
-  padding-left: 35px!important;
+  padding-left: 30px!important;
   margin: 4px 4px 12px 0;
   cursor: pointer;
   font-size: 22px;
@@ -103,13 +125,11 @@
       }
     }
   }
-
-  &:hover {
-    input ~ .checkmark {
-      background-color: @gray-888;
-    }
-  }
-
+  // &:hover {
+  //   input ~ .checkmark {
+  //     background-color: @gray-ddd;
+  //   }
+  // }
   .checkmark {
     &::after {
       left: 9px;
@@ -127,10 +147,10 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: @gray-lighter;
-  border-radius: 5px;
+  height: 20px;
+  width: 20px;
+  background-color: @gray-ddd;
+  border-radius: @border-radius-base;
 
   &::after {
     content: "";
@@ -140,13 +160,15 @@
 }
 
 .ccc-table-wrapper {
-  overflow: scroll;
+  display: none;
+  height: 150px;
+  overflow-y: scroll;
   background-color: @white-color;
 }
 
 .ccc-table {
   table-layout: fixed;
-  color: initial;
+  color: @text-color;
   background-color: @white-color;
 }
 
