--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -22,42 +22,32 @@
           </div>
         </div>
         <div class="ccc-table-wrapper" data-select="stat">
-          <div class="table-responsive">
-            <table class="table table-striped ccc-table">
-              <thead>
-                <tr>
-                  <th>Navn</th>
-                  <th>Udbyder</th>
-                  <th>Formål</th>
-                  <th>Udløb</th>
-                  <th>Type</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>XCookie_123</td>
-                  <td>Ku.dk</td>
-                  <td>Til login</td>
-                  <td> session</td>
-                  <td>sessionstorage</td>
-                </tr>
-                <tr>
-                  <td>YCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Værn mod CSRF angreb</td>
-                  <td>30 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <table class="table table-striped ccc-table" summary="Statistikcookies">
+            <thead>
+              <tr>
+                <th>Navn</th>
+                <th>Udbyder</th>
+                <th>Varighed</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>XCookie_123</td>
+                <td>Ku.dk</td>
+                <td>365 dage</td>
+              </tr>
+              <tr>
+                <td>YCookie</td>
+                <td>Ku.dk</td>
+                <td>30 min.</td>
+              </tr>
+              <tr>
+                <td>ZCookie</td>
+                <td>Ku.dk</td>
+                <td>365 dage</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </li>
       <li>
@@ -73,63 +63,47 @@
           </div>
         </div>
         <div class="ccc-table-wrapper" data-select="market">
-          <div class="table-responsive">
-            <table class="table table-striped ccc-table">
-              <thead>
-                <tr>
-                  <th>Navn</th>
-                  <th>Udbyder</th>
-                  <th>Formål</th>
-                  <th>Udløb</th>
-                  <th>Type</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>XCookie_123</td>
-                  <td>Ku.dk</td>
-                  <td>Til login</td>
-                  <td> session</td>
-                  <td>sessionstorage</td>
-                </tr>
-                <tr>
-                  <td>YCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Værn mod CSRF angreb</td>
-                  <td>30 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-                <tr>
-                  <td>ZCookie</td>
-                  <td>Ku.dk</td>
-                  <td>Test af cookie-system</td>
-                  <td>40 minutter</td>
-                  <td>HTTP cookie</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <table class="table table-striped ccc-table" summary="Markedsføringscookies">
+            <thead>
+              <tr>
+                <th>Navn</th>
+                <th>Udbyder</th>
+                <th>Varighed</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>XCookie_123</td>
+                <td>Ku.dk</td>
+                <td>30 min</td>
+              </tr>
+              <tr>
+                <td>YCookie</td>
+                <td>Ku.dk</td>
+                <td>365 dage</td>
+              </tr>
+              <tr>
+                <td>ZCookie</td>
+                <td>Ku.dk</td>
+                <td>365 dage</td>
+              </tr>
+              <tr>
+                <td>ZCookie</td>
+                <td>Ku.dk</td>
+                <td>1 dag</td>
+              </tr>
+              <tr>
+                <td>ZCookie</td>
+                <td>Ku.dk</td>
+                <td>365 dage</td>
+              </tr>
+              <tr>
+                <td>ZCookie</td>
+                <td>Ku.dk</td>
+                <td>365 dage</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <!---->
       </li>
