--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -8,7 +8,7 @@
   padding: 0;
   z-index: 1020;
   color: @white-color;
-  background-color: @ku-cookiebox-bg;
+  background-color: rgba(@ku-cookiebox-bg, .96);
 
   a {
     color: @white-color;
