--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -1,8 +1,7 @@
 <section class="container-fluid ccc" tabindex="-1" role="dialog" aria-labelledby="ccc-title" aria-describedby="ccc-desc">
-  <!---->
   <div class="container ccc-popup" role="document">
     <header class="ccc-popup-header">
-      <h2 class="ccc-title" id="ccc-title">Samtykke til brug af cookies</h2>
+      <h2 id="ccc-title">Samtykke til brug af cookies</h2>
     </header>
     <div class="ccc-intro" id="ccc-desc">
       <p>Vi vil gerne gemme oplysninger på din computer eller mobil (såkaldte cookies) for at forbedre din brugeroplevelse. Du kan altid ændre dit samtykke under "<a href="#">Cookie- og privatlivspolitik</a>" som du finder i bunden af hver side.
@@ -105,7 +104,6 @@
             </tbody>
           </table>
         </div>
-        <!---->
       </li>
     </ul>
     <div class="ccc-buttons">
