Clean up cookie popups

--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -119,6 +119,7 @@
 
 <script>
   $(function() {
+    $('body').addClass('modal-open');
     $('.ccc-select').click(function() {
       $(this).toggleClass("open");
       var type = $(this).data('select');
