--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -24,7 +24,6 @@
     </nav>
     {% include nav/ku-nav.html %}
     {{ content }}
-    {% include ku-privacypolicy.html %}
-    {% include global-footer.html %}
+    {% include global-footer.html %}½
   </body>
 </html>
