Cookie table captions

--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -21,7 +21,8 @@
           </div>
         </div>
         <div class="ccc-table-wrapper" data-select="stat">
-          <table class="table table-striped ccc-table" summary="Statistikcookies">
+          <table class="table table-striped ccc-table">
+            <caption class="sr-only">Statistikcookies</caption>
             <thead>
               <tr>
                 <th>Navn</th>
@@ -62,7 +63,8 @@
           </div>
         </div>
         <div class="ccc-table-wrapper" data-select="market">
-          <table class="table table-striped ccc-table" summary="Markedsføringscookies">
+          <table class="table table-striped ccc-table">
+            <caption class="sr-only">Markedsføringscookies</caption>
             <thead>
               <tr>
                 <th>Navn</th>
