--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -6,7 +6,7 @@
   right: 0;
   left: 0;
   padding: 0;
-  z-index: 1020;
+  z-index: (@zindex-modal + 1);
   color: @white-color;
   background-color: rgba(@ku-cookiebox-bg, .96);
 
