--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -1,4 +1,4 @@
-<section class="container-fluid ccc" tabindex="-1" role="dialog" aria-labelledby="ccc-title" aria-describedby="ccc-desc">
+<section class="ccc" tabindex="-1" role="dialog" aria-labelledby="ccc-title" aria-describedby="ccc-desc">
   <div class="container ccc-popup" role="document">
     <header class="ccc-popup-header">
       <h2 id="ccc-title">Samtykke til brug af cookies</h2>
